--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.9.5",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@vueuse/nuxt": "^10.6.1",
+    "nanoid": "^5.0.3",
+    "vuedraggable": "^4.1.0"
   }
 }
