--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trello-board",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@8.7.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -17,8 +18,10 @@
     "@nuxtjs/tailwindcss": "^6.9.5",
     "eslint": "^8.53.0",
     "nuxt": "^3.8.1",
+    "typescript": "^5.2.2",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.22"
   },
   "dependencies": {
     "@vueuse/nuxt": "^10.6.1",
