--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.0.3",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/tailwindcss": "^6.9.5",
-    "eslint": "^8.53.0",
-    "nuxt": "^3.8.1",
-    "typescript": "^5.2.2",
+    "@nuxtjs/tailwindcss": "^6.10.0",
+    "eslint": "^8.54.0",
+    "nuxt": "^3.8.2",
+    "typescript": "^5.3.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.22"
