Style board with tailwind

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,12 @@
   "cSpell.words": [
     "vuedraggable",
   ],
+
+  // Tailwind
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "editor.quickSuggestions": {
+      "strings": true
+  }
 }
